# OpenGL_C_Example

./: .gitignore  CMakeLists.txt  README.md  main.c
libraries/: glad.c
src/test/: test.c  test.h
src/utils/: vector.c  vector.h
